Updated end of day

--- a/svm.ipynb
+++ b/svm.ipynb
@@ -584,98 +584,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iteration 0 / 1500: loss 97.401327\n",
-      "iteration 100 / 1500: loss 84.062468\n",
-      "iteration 200 / 1500: loss 81.303534\n",
-      "iteration 300 / 1500: loss 76.852201\n",
-      "iteration 400 / 1500: loss 73.169684\n",
-      "iteration 500 / 1500: loss 68.366563\n",
-      "iteration 600 / 1500: loss 65.399677\n",
-      "iteration 700 / 1500: loss 61.366210\n",
-      "iteration 800 / 1500: loss 58.297975\n",
-      "iteration 900 / 1500: loss 56.295315\n",
-      "iteration 1000 / 1500: loss 53.130796\n",
-      "iteration 1100 / 1500: loss 51.350027\n",
-      "iteration 1200 / 1500: loss 49.659714\n",
-      "iteration 1300 / 1500: loss 45.796097\n",
-      "iteration 1400 / 1500: loss 43.691386\n",
-      "iteration 0 / 1500: loss 253.250003\n",
-      "iteration 100 / 1500: loss 211.473948\n",
-      "iteration 200 / 1500: loss 181.148817\n",
-      "iteration 300 / 1500: loss 156.055850\n",
-      "iteration 400 / 1500: loss 134.890791\n",
-      "iteration 500 / 1500: loss 115.922741\n",
-      "iteration 600 / 1500: loss 100.780984\n",
-      "iteration 700 / 1500: loss 86.182850\n",
-      "iteration 800 / 1500: loss 75.891174\n",
-      "iteration 900 / 1500: loss 66.064332\n",
-      "iteration 1000 / 1500: loss 57.768230\n",
-      "iteration 1100 / 1500: loss 50.186831\n",
-      "iteration 1200 / 1500: loss 43.937713\n",
-      "iteration 1300 / 1500: loss 38.331351\n",
-      "iteration 1400 / 1500: loss 33.363699\n",
-      "iteration 0 / 1500: loss 408.666625\n",
-      "iteration 100 / 1500: loss 313.809681\n",
-      "iteration 200 / 1500: loss 243.110023\n",
-      "iteration 300 / 1500: loss 190.873033\n",
-      "iteration 400 / 1500: loss 148.558413\n",
-      "iteration 500 / 1500: loss 117.554214\n",
-      "iteration 600 / 1500: loss 92.302392\n",
-      "iteration 700 / 1500: loss 73.189009\n",
-      "iteration 800 / 1500: loss 57.550378\n",
-      "iteration 900 / 1500: loss 46.224512\n",
-      "iteration 1000 / 1500: loss 38.133166\n",
-      "iteration 1100 / 1500: loss 30.449282\n",
-      "iteration 1200 / 1500: loss 24.796502\n",
-      "iteration 1300 / 1500: loss 20.633707\n",
-      "iteration 1400 / 1500: loss 17.366348\n",
-      "iteration 0 / 1500: loss 561.808323\n",
-      "iteration 100 / 1500: loss 389.053705\n",
-      "iteration 200 / 1500: loss 274.775381\n",
-      "iteration 300 / 1500: loss 193.797859\n",
-      "iteration 400 / 1500: loss 137.415116\n",
-      "iteration 500 / 1500: loss 98.152505\n",
-      "iteration 600 / 1500: loss 71.790285\n",
-      "iteration 700 / 1500: loss 52.427019\n",
-      "iteration 800 / 1500: loss 38.316021\n",
-      "iteration 900 / 1500: loss 28.944939\n",
-      "iteration 1000 / 1500: loss 21.545004\n",
-      "iteration 1100 / 1500: loss 17.785293\n",
-      "iteration 1200 / 1500: loss 13.894919\n",
-      "iteration 1300 / 1500: loss 12.083697\n",
-      "iteration 1400 / 1500: loss 10.136247\n",
-      "iteration 0 / 1500: loss 715.043653\n",
-      "iteration 100 / 1500: loss 451.718682\n",
-      "iteration 200 / 1500: loss 289.753341\n",
-      "iteration 300 / 1500: loss 186.113504\n",
-      "iteration 400 / 1500: loss 119.857373\n",
-      "iteration 500 / 1500: loss 78.599024\n",
-      "iteration 600 / 1500: loss 51.804616\n",
-      "iteration 700 / 1500: loss 35.291398\n",
-      "iteration 800 / 1500: loss 24.804464\n",
-      "iteration 900 / 1500: loss 17.478549\n",
-      "iteration 1000 / 1500: loss 13.620575\n",
-      "iteration 1100 / 1500: loss 11.549877\n",
-      "iteration 1200 / 1500: loss 8.827554\n",
-      "iteration 1300 / 1500: loss 7.583785\n",
-      "iteration 1400 / 1500: loss 7.556861\n",
-      "iteration 0 / 1500: loss 868.841497\n",
-      "iteration 100 / 1500: loss 495.976533\n",
-      "iteration 200 / 1500: loss 286.585655\n",
-      "iteration 300 / 1500: loss 167.606509\n",
-      "iteration 400 / 1500: loss 98.683326\n",
-      "iteration 500 / 1500: loss 59.543956\n",
-      "iteration 600 / 1500: loss 36.928932\n",
-      "iteration 700 / 1500: loss 23.647169\n",
-      "iteration 800 / 1500: loss 15.934204\n",
-      "iteration 900 / 1500: loss 12.168158\n",
-      "iteration 1000 / 1500: loss 9.782324\n",
-      "iteration 1100 / 1500: loss 8.535789\n",
-      "iteration 1200 / 1500: loss 7.502753\n",
-      "iteration 1300 / 1500: loss 6.697282\n",
-      "iteration 1400 / 1500: loss 7.216495\n",
-      "iteration 0 / 1500: loss 1014.625841\n",
-      "iteration 100 / 1500: loss 528.661250\n"
+      "iteration 0 / 1500: loss 97.972779\n",
+      "iteration 100 / 1500: loss 85.504706\n",
+      "iteration 200 / 1500: loss 80.402217\n",
+      "iteration 300 / 1500: loss 75.530594\n",
+      "iteration 400 / 1500: loss 70.813700\n",
+      "iteration 500 / 1500: loss 67.621541\n",
+      "iteration 600 / 1500: loss 65.641007\n",
+      "iteration 700 / 1500: loss 61.879873\n",
+      "iteration 800 / 1500: loss 59.196735\n",
+      "iteration 900 / 1500: loss 56.352339\n",
+      "iteration 1000 / 1500: loss 53.634513\n",
+      "iteration 1100 / 1500: loss 50.493985\n",
+      "iteration 1200 / 1500: loss 48.776989\n",
+      "iteration 1300 / 1500: loss 46.593075\n",
+      "iteration 1400 / 1500: loss 43.425505\n",
+      "iteration 0 / 1500: loss 169.052621\n",
+      "iteration 100 / 1500: loss 144.254869\n",
+      "iteration 200 / 1500: loss 129.060251\n",
+      "iteration 300 / 1500: loss 117.870977\n",
+      "iteration 400 / 1500: loss 107.376767\n",
+      "iteration 500 / 1500: loss 98.042934\n",
+      "iteration 600 / 1500: loss 88.319857\n",
+      "iteration 700 / 1500: loss 81.213798\n",
+      "iteration 800 / 1500: loss 73.954980\n",
+      "iteration 900 / 1500: loss 67.854794\n"
      ]
     }
    ],
@@ -713,8 +646,8 @@
     "num_LR_tests = 10\n",
     "num_RS_tests = 10\n",
     "iters_per_test = 1500\n",
-    "deltaLR = (learning_rates[1]-learning_rates[0])/(num_tests-1)\n",
-    "deltaRS = (regularization_strengths[1]-regularization_strengths[0])/(num_tests-1)\n",
+    "deltaLR = (learning_rates[1]-learning_rates[0])/(num_LR_tests-1)\n",
+    "deltaRS = (regularization_strengths[1]-regularization_strengths[0])/(num_RS_tests-1)\n",
     "LR = learning_rates[0]\n",
     "for i in range(num_LR_tests):\n",
     "    RS = regularization_strengths[0]\n",
