Updated end of day

--- a/svm.ipynb
+++ b/svm.ipynb
@@ -308,14 +308,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 9.743596\n"
+      "loss: 9.891980\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
     "import time\n",
     "\n",
     "# generate a random SVM weight matrix of small numbers\n",
-    "W = np.random.randn(3073, 10) * 0.0001 \n",
+    "W = np.random.randn(3073, 10) * .0001 \n",
     "\n",
     "loss, grad = svm_loss_naive(W, X_dev, y_dev, 0.000005)\n",
     "print('loss: %f' % (loss, ))"
